--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,15 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # Ensure latest version
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v3  # Ensure latest version
+      uses: actions/setup-node@v3
       with:
-        node-version: '20'  # Updated to Node.js 20
+        node-version: '20'
+
+    - name: Change directory
+      run: cd lol-items
 
     - name: Install dependencies
       run: npm install
