--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,17 +18,18 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Change directory
-      run: cd lol-items
-
     - name: Install dependencies
-      run: npm install
+      run: |
+        cd lol-items
+        npm install
 
     - name: Build
-      run: npm run build
+      run: |
+        cd lol-items
+        npm run build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+        publish_dir: ./lol-items/build
