--- a/lol-items/package.json
+++ b/lol-items/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.2.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
 }
