--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,5 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Build and Deploy React app to GitHub Pages
+    - name: Build and Deploy lol-items app to GitHub Pages
       uses: omkartapale/react-deployment-gh-pages@v1.0.0
+      with:
+        project_path: 'lol-items'
