--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,12 +14,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-
+      
     - name: Use Node.js 20
       uses: actions/setup-node@v3
       with:
         node-version: '20'
         cache: "npm"
+        cache-dependency-path: lol-items/package-lock.json
 
     - name: Install Packages
       run: |
